# bdd_od

./: .dockerignore  .gitignore  .pylintrc  README.md  analysis_report.md  main.py  pyproject.toml
notebooks/: BDD EDA.ipynb
src/: eda.py  img_checker.py  main.py  utils.py
