[project]
name = "bdd-od"
version = "0.1.0"
description = "Analyze and Evalaute BDD data on Pre-trained Object Detection Model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "imagehash>=4.3.2",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pylint>=4.0.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
]
